tools/tests/errors/surf_arity_11.experr
startswith() expected at least 1 argument(s)
